--- a/notebook/R4_MODmarkers.ipynb
+++ b/notebook/R4_MODmarkers.ipynb
@@ -17,9 +17,12 @@
     "import os\n",
     "\n",
     "sys.path.append(os.path.abspath(\"../src\"))\n",
+    "\n",
+    "from utils import load_merfish_signal_df, load_banksy_result\n",
     "from plot import plot_marker_signals\n",
     "\n",
     "from pathlib import Path\n",
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -38,12 +41,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "signal_data_folder_path = Path(\"../data/mouse_hypothalamus/MERFISH/\")"
+    "#### Signals in the Tissue Section"
    ]
   },
   {
@@ -52,45 +53,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\n",
-    "    \"Centroid_X\",\n",
-    "    \"Centroid_Y\",\n",
-    "    \"Centroid_Z\",\n",
-    "    \"Gene_name\",\n",
-    "    \"Cell_name\",\n",
-    "    \"Total_brightness\",\n",
-    "    \"Area\",\n",
-    "    \"Error_bit\",\n",
-    "    \"Error_direction\",\n",
-    "]\n",
-    "\n",
-    "signal_coordinate_df = pd.read_csv(\n",
-    "    signal_data_folder_path / \"merfish_barcodes_example.csv\", usecols=columns\n",
-    ").rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\",\n",
-    "        \"Centroid_Z\": \"z\",\n",
-    "        \"Gene_name\": \"gene\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# remove dummy molecules\n",
-    "signal_coordinate_df = signal_coordinate_df.loc[\n",
-    "    ~signal_coordinate_df[\"gene\"].str.contains(\"Blank|NegControl\"),\n",
-    "]\n",
-    "\n",
-    "signal_coordinate_df[\"gene\"] = signal_coordinate_df[\"gene\"].astype(\"category\")\n",
-    "\n",
-    "# shift the coordinates to avoid the negative values\n",
-    "coordinate_x_m =  signal_coordinate_df['x'].min()\n",
-    "coordinate_y_m =  signal_coordinate_df['y'].min()\n",
-    "signal_coordinate_df['x'] = signal_coordinate_df['x'] - coordinate_x_m\n",
-    "signal_coordinate_df['y'] = signal_coordinate_df['y'] - coordinate_y_m\n",
-    "\n",
-    "# make a copy to avoid SettingWithCopyWarning\n",
-    "signal_coordinate_df = signal_coordinate_df.copy()"
+    "MERFISH_data_folder_path = Path(\"../data/mouse_hypothalamus/MERFISH/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "signal_coordinate_df, coordinate_x_m, coordinate_y_m = load_merfish_signal_df(MERFISH_data_folder_path/\"merfish_barcodes_example.csv\")"
    ]
   },
   {
@@ -115,30 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\n",
-    "    \"Centroid_X\",\n",
-    "    \"Centroid_Y\",\n",
-    "    \"Bregma\",\n",
-    "    \"lam0.2\",\n",
-    "]\n",
-    "\n",
-    "banksy_result = pd.read_csv(\n",
-    "    banksy_folder_path / 'banksy_cluster.txt', usecols=columns, sep = '\\t'\n",
-    ").rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\",\n",
-    "        \"Bregma\": \"Bregma\",\n",
-    "        \"lam0.2\": \"banksy_cluster\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "banksy_result = banksy_result[banksy_result['Bregma'] == -0.24]\n",
-    "\n",
-    "banksy_result['x'] = banksy_result['x'] - coordinate_x_m\n",
-    "banksy_result['y'] = banksy_result['y'] - coordinate_y_m\n",
-    "\n",
-    "banksy_result = banksy_result.copy()"
+    "banksy_result = load_banksy_result(banksy_folder_path/\"banksy_cluster.txt\", coordinate_x_m, coordinate_y_m)"
    ]
   },
   {
