--- a/notebook/R5_MODscRNA.ipynb
+++ b/notebook/R5_MODscRNA.ipynb
@@ -21,14 +21,13 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from scipy.io import mmread\n",
-    "import anndata as ad\n",
     "\n",
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(\"../src\"))\n",
+    "\n",
+    "from utils import load_merfish_signal_df, load_banksy_result, load_merfish_data, load_scRNA_data\n",
     "from plot import plot_annotate_heatmap\n",
-    "from utils import load_scRNA_data\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -63,45 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\n",
-    "    \"Centroid_X\",\n",
-    "    \"Centroid_Y\",\n",
-    "    \"Centroid_Z\",\n",
-    "    \"Gene_name\",\n",
-    "    \"Cell_name\",\n",
-    "    \"Total_brightness\",\n",
-    "    \"Area\",\n",
-    "    \"Error_bit\",\n",
-    "    \"Error_direction\",\n",
-    "]\n",
-    "\n",
-    "signal_coordinate_df = pd.read_csv(\n",
-    "    MERFISH_data_folder_path / \"merfish_barcodes_example.csv\", usecols=columns\n",
-    ").rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\",\n",
-    "        \"Centroid_Z\": \"z\",\n",
-    "        \"Gene_name\": \"gene\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# remove dummy molecules\n",
-    "signal_coordinate_df = signal_coordinate_df.loc[\n",
-    "    ~signal_coordinate_df[\"gene\"].str.contains(\"Blank|NegControl\"),\n",
-    "]\n",
-    "\n",
-    "signal_coordinate_df[\"gene\"] = signal_coordinate_df[\"gene\"].astype(\"category\")\n",
-    "\n",
-    "# shift the coordinates to avoid the negative values\n",
-    "coordinate_x_m =  signal_coordinate_df['x'].min()\n",
-    "coordinate_y_m =  signal_coordinate_df['y'].min()\n",
-    "signal_coordinate_df['x'] = signal_coordinate_df['x'] - coordinate_x_m\n",
-    "signal_coordinate_df['y'] = signal_coordinate_df['y'] - coordinate_y_m\n",
-    "\n",
-    "# make a copy to avoid SettingWithCopyWarning\n",
-    "signal_coordinate_df = signal_coordinate_df.copy()"
+    "signal_coordinate_df, coordinate_x_m, coordinate_y_m = load_merfish_signal_df(MERFISH_data_folder_path/\"merfish_barcodes_example.csv\")"
    ]
   },
   {
@@ -126,30 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\n",
-    "    \"Centroid_X\",\n",
-    "    \"Centroid_Y\",\n",
-    "    \"Bregma\",\n",
-    "    \"lam0.2\",\n",
-    "]\n",
-    "\n",
-    "banksy_result = pd.read_csv(\n",
-    "    banksy_folder_path / 'banksy_cluster.txt', usecols=columns, sep = '\\t'\n",
-    ").rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\",\n",
-    "        \"Bregma\": \"Bregma\",\n",
-    "        \"lam0.2\": \"banksy_cluster\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "banksy_result = banksy_result[banksy_result['Bregma'] == -0.24]\n",
-    "\n",
-    "banksy_result['x'] = banksy_result['x'] - coordinate_x_m\n",
-    "banksy_result['y'] = banksy_result['y'] - coordinate_y_m\n",
-    "\n",
-    "banksy_result = banksy_result.copy()"
+    "banksy_result = load_banksy_result(banksy_folder_path/\"banksy_cluster.txt\", coordinate_x_m, coordinate_y_m)"
    ]
   },
   {
@@ -165,54 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merfish_data = pd.read_csv(\n",
-    "    MERFISH_data_folder_path / \"merfish_all_cells.csv\"\n",
-    "    ).rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\"\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "merfish_data = merfish_data.drop(columns=[col for col in merfish_data.columns if col == 'Fos' or col.startswith('Blank_')])\n",
-    "merfish_data = merfish_data[merfish_data[\"Cell_class\"] != \"Ambiguous\"]\n",
-    "merfish_data = merfish_data[merfish_data['Animal_ID'] == 1]\n",
-    "merfish_data = merfish_data[merfish_data['Bregma'] == -0.24]\n",
-    "\n",
-    "merfish_data['x'] = merfish_data['x'] - coordinate_x_m\n",
-    "merfish_data['y'] = merfish_data['y'] - coordinate_y_m\n",
-    "\n",
-    "merfish_data['banksy'] = banksy_result['banksy_cluster'].values\n",
-    "\n",
-    "merfish_data = merfish_data.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell_class_m = {'Astrocyte': 'Astrocyte',\n",
-    " 'Endothelial 1': 'Endothelial',\n",
-    " 'Endothelial 2': 'Endothelial',\n",
-    " 'Endothelial 3': 'Endothelial',\n",
-    " 'Ependymal': 'Ependymal',\n",
-    " 'Excitatory': 'Excitatory',\n",
-    " 'Inhibitory': 'Inhibitory',\n",
-    " 'Microglia': 'Microglia',\n",
-    " 'OD Immature 1': 'OD Immature',\n",
-    " 'OD Immature 2': 'OD Immature',\n",
-    " 'OD Mature 1': 'OD Mature',\n",
-    " 'OD Mature 2': 'OD Mature',\n",
-    " 'OD Mature 3': 'OD Mature',\n",
-    " 'OD Mature 4': 'OD Mature',\n",
-    " 'Pericytes': 'Pericytes'}\n",
-    "\n",
-    "merfish_data['Cell_class'] = merfish_data['Cell_class'].map(cell_class_m)\n",
-    "merfish_data = merfish_data.sort_values(by='Cell_class')\n",
-    "\n",
-    "merfish_data = merfish_data.copy()"
+    "merfish_data = load_merfish_data(MERFISH_data_folder_path / \"merfish_all_cells.csv\", \n",
+    "                                 banksy_result, coordinate_x_m, coordinate_y_m, \n",
+    "                                 animal_id=1, bregma_value=-0.24)"
    ]
   },
   {
