--- a/notebook/R6_NeuronCluster.ipynb
+++ b/notebook/R6_NeuronCluster.ipynb
@@ -19,7 +19,9 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(\"../src\"))\n",
-    "from utils import order_neuron_clusters, get_cluster_boundaries, load_scRNA_data\n",
+    "\n",
+    "from utils import load_scRNA_data\n",
+    "from utils import order_neuron_clusters, get_cluster_boundaries\n",
     "from plot import plot_neuron_cluster_heatmap\n",
     "\n",
     "import numpy as np\n",
