--- a/notebook/R1_SliceEquivalence.ipynb
+++ b/notebook/R1_SliceEquivalence.ipynb
@@ -28,7 +28,12 @@
    "source": [
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(\"../src\"))\n",
+    "from utils import load_banksy_result"
    ]
   },
   {
@@ -53,65 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\n",
-    "    \"Centroid_X\",\n",
-    "    \"Centroid_Y\",\n",
-    "    \"Bregma\",\n",
-    "    \"lam0.2\",\n",
-    "]\n",
-    "\n",
-    "banksy_result = pd.read_csv(\n",
-    "    banksy_folder_path / 'banksy_cluster.txt', usecols=columns, sep = '\\t'\n",
-    ").rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\",\n",
-    "        \"Bregma\": \"Bregma\",\n",
-    "        \"lam0.2\": \"banksy_cluster\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "banksy_result = banksy_result.copy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Segmentation Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MERFISH_data_folder_path = Path(\"../data/mouse_hypothalamus/MERFISH/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merfish_data = pd.read_csv(\n",
-    "    MERFISH_data_folder_path / \"merfish_all_cells.csv\"\n",
-    "    ).rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\"\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "merfish_data = merfish_data.drop(columns=[col for col in merfish_data.columns if col == 'Fos' or col.startswith('Blank_')])\n",
-    "merfish_data = merfish_data[merfish_data[\"Cell_class\"] != \"Ambiguous\"]\n",
-    "merfish_data = merfish_data[merfish_data['Animal_ID'] == 1]\n",
-    "\n",
-    "merfish_data['banksy'] = banksy_result['banksy_cluster'].values\n",
-    "\n",
-    "merfish_data = merfish_data.copy()"
+    "banksy_result = load_banksy_result(banksy_folder_path/\"banksy_cluster.txt\")"
    ]
   },
   {
