--- a/notebook/R2_VSI.ipynb
+++ b/notebook/R2_VSI.ipynb
@@ -11,13 +11,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -30,12 +23,20 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
+    "from utils import load_merfish_signal_df, load_banksy_result, load_merfish_data, load_boundaries_data\n",
     "from utils import extract_cell_vsi\n",
     "from plot import plot_VSI_map, plot_vsi_with_named_squares, plot_vsi_distribution_comparison, plot_normalized_histogram, plot_vsi_qqplot\n",
     "\n",
     "from IPython.display import display\n",
     "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### data"
    ]
   },
   {
@@ -60,45 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\n",
-    "    \"Centroid_X\",\n",
-    "    \"Centroid_Y\",\n",
-    "    \"Centroid_Z\",\n",
-    "    \"Gene_name\",\n",
-    "    \"Cell_name\",\n",
-    "    \"Total_brightness\",\n",
-    "    \"Area\",\n",
-    "    \"Error_bit\",\n",
-    "    \"Error_direction\",\n",
-    "]\n",
-    "\n",
-    "signal_coordinate_df = pd.read_csv(\n",
-    "    MERFISH_data_folder_path / \"merfish_barcodes_example.csv\", usecols=columns\n",
-    ").rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\",\n",
-    "        \"Centroid_Z\": \"z\",\n",
-    "        \"Gene_name\": \"gene\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# remove dummy molecules\n",
-    "signal_coordinate_df = signal_coordinate_df.loc[\n",
-    "    ~signal_coordinate_df[\"gene\"].str.contains(\"Blank|NegControl\"),\n",
-    "]\n",
-    "\n",
-    "signal_coordinate_df[\"gene\"] = signal_coordinate_df[\"gene\"].astype(\"category\")\n",
-    "\n",
-    "# shift the coordinates to avoid the negative values\n",
-    "coordinate_x_m =  signal_coordinate_df['x'].min()\n",
-    "coordinate_y_m =  signal_coordinate_df['y'].min()\n",
-    "signal_coordinate_df['x'] = signal_coordinate_df['x'] - coordinate_x_m\n",
-    "signal_coordinate_df['y'] = signal_coordinate_df['y'] - coordinate_y_m\n",
-    "\n",
-    "# make a copy to avoid SettingWithCopyWarning\n",
-    "signal_coordinate_df = signal_coordinate_df.copy()"
+    "signal_coordinate_df, coordinate_x_m, coordinate_y_m = load_merfish_signal_df(MERFISH_data_folder_path/\"merfish_barcodes_example.csv\")"
    ]
   },
   {
@@ -153,30 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\n",
-    "    \"Centroid_X\",\n",
-    "    \"Centroid_Y\",\n",
-    "    \"Bregma\",\n",
-    "    \"lam0.2\",\n",
-    "]\n",
-    "\n",
-    "banksy_result = pd.read_csv(\n",
-    "    banksy_folder_path / 'banksy_cluster.txt', usecols=columns, sep = '\\t'\n",
-    ").rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\",\n",
-    "        \"Bregma\": \"Bregma\",\n",
-    "        \"lam0.2\": \"banksy_cluster\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "banksy_result = banksy_result[banksy_result['Bregma'] == -0.24]\n",
-    "\n",
-    "banksy_result['x'] = banksy_result['x'] - coordinate_x_m\n",
-    "banksy_result['y'] = banksy_result['y'] - coordinate_y_m\n",
-    "\n",
-    "banksy_result = banksy_result.copy()"
+    "banksy_result = load_banksy_result(banksy_folder_path/\"banksy_cluster.txt\", coordinate_x_m, coordinate_y_m)"
    ]
   },
   {
@@ -192,83 +132,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merfish_data = pd.read_csv(\n",
-    "    MERFISH_data_folder_path / \"merfish_all_cells.csv\"\n",
-    "    ).rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\"\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "merfish_data = merfish_data.drop(columns=[col for col in merfish_data.columns if col == 'Fos' or col.startswith('Blank_')])\n",
-    "merfish_data = merfish_data[merfish_data[\"Cell_class\"] != \"Ambiguous\"]\n",
-    "merfish_data = merfish_data[merfish_data['Animal_ID'] == 1]\n",
-    "merfish_data = merfish_data[merfish_data['Bregma'] == -0.24]\n",
-    "\n",
-    "merfish_data['x'] = merfish_data['x'] - coordinate_x_m\n",
-    "merfish_data['y'] = merfish_data['y'] - coordinate_y_m\n",
-    "\n",
-    "merfish_data['banksy'] = banksy_result['banksy_cluster'].values\n",
-    "\n",
-    "merfish_data = merfish_data.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell_class_m = {'Astrocyte': 'Astrocyte',\n",
-    " 'Endothelial 1': 'Endothelial',\n",
-    " 'Endothelial 2': 'Endothelial',\n",
-    " 'Endothelial 3': 'Endothelial',\n",
-    " 'Ependymal': 'Ependymal',\n",
-    " 'Excitatory': 'Excitatory',\n",
-    " 'Inhibitory': 'Inhibitory',\n",
-    " 'Microglia': 'Microglia',\n",
-    " 'OD Immature 1': 'OD Immature',\n",
-    " 'OD Immature 2': 'OD Immature',\n",
-    " 'OD Mature 1': 'OD Mature',\n",
-    " 'OD Mature 2': 'OD Mature',\n",
-    " 'OD Mature 3': 'OD Mature',\n",
-    " 'OD Mature 4': 'OD Mature',\n",
-    " 'Pericytes': 'Pericytes'}\n",
-    "\n",
-    "merfish_data['Cell_class'] = merfish_data['Cell_class'].map(cell_class_m)\n",
-    "merfish_data = merfish_data.sort_values(by='Cell_class')\n",
-    "\n",
-    "merfish_data = merfish_data.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# original cell types\n",
-    "merfish_024 = merfish_data[merfish_data['Bregma'] == -0.24]\n",
-    "\n",
-    "class_024 = {'Astrocyte':1,\n",
-    " 'Endothelial':2,\n",
-    " 'Ependymal':3,\n",
-    " 'Excitatory':4,\n",
-    " 'Inhibitory':5,\n",
-    " 'Microglia':6,\n",
-    " 'OD Immature':7,\n",
-    " 'OD Mature':8,\n",
-    " 'Pericytes':9}\n",
-    "\n",
-    "merfish_024['Cell_class'] = merfish_024['Cell_class'].map(class_024)"
+    "merfish_data = load_merfish_data(MERFISH_data_folder_path / \"merfish_all_cells.csv\", \n",
+    "                                 banksy_result, coordinate_x_m, coordinate_y_m, \n",
+    "                                 animal_id=1, bregma_value=-0.24)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cell Boundaries Dataset"
+    "#### Cell boundaries"
    ]
   },
   {
@@ -277,33 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boundaries_df = pd.read_csv(MERFISH_data_folder_path/'cellboundaries_example_animal.csv')\n",
-    "boundaries_df = boundaries_df.dropna(subset=['boundaryX', 'boundaryY'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell_ids = merfish_data['Cell_ID']\n",
-    "boundaries_df = boundaries_df[boundaries_df['feature_uID'].isin(cell_ids)]\n",
-    "boundaries_df = boundaries_df.merge(\n",
-    "    merfish_data[['Cell_ID', 'x', 'y', 'banksy']],\n",
-    "    left_on='feature_uID',\n",
-    "    right_on='Cell_ID',\n",
-    "    how='inner'\n",
-    ")\n",
-    "boundaries_df = boundaries_df.drop(columns=['Cell_ID'])\n",
-    "\n",
-    "boundaries_df['boundaryX'] = boundaries_df['boundaryX'].apply(lambda x: [float(i) for i in x.split(';')] if isinstance(x, str) else x)\n",
-    "boundaries_df['boundaryY'] = boundaries_df['boundaryY'].apply(lambda x: [float(i) for i in x.split(';')] if isinstance(x, str) else x)\n",
-    "\n",
-    "boundaries_df['boundaryX'] = boundaries_df['boundaryX'].apply(lambda x: [i - coordinate_x_m for i in x] if isinstance(x, list) else x)\n",
-    "boundaries_df['boundaryY'] = boundaries_df['boundaryY'].apply(lambda x: [i - coordinate_y_m for i in x] if isinstance(x, list) else x)\n",
-    "\n",
-    "boundaries_df = boundaries_df.copy()"
+    "boundaries_df = load_boundaries_data(MERFISH_data_folder_path/'cellboundaries_example_animal.csv', \n",
+    "                                     merfish_data, coordinate_x_m, coordinate_y_m)"
    ]
   },
   {
@@ -584,7 +432,8 @@
     "    cell_strength_2=MOD2_str,\n",
     "    signal_threshold=3.0,\n",
     "    figure_height=7,\n",
-    "    cmap=\"BIH\"\n",
+    "    cmap=\"BIH\",\n",
+    "    ylim=(1e-1,64)\n",
     ")"
    ]
   },
@@ -594,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_normalized_histogram(vals1, vals2, bins=bins1, epsilon= 1e-10)"
+    "plot_normalized_histogram(vals1, vals2, bins=bins1, epsilon= 1e-10, ylim=(1e-1, 10**11))"
    ]
   },
   {
