--- a/notebook/R2_VSI.ipynb
+++ b/notebook/R2_VSI.ipynb
@@ -205,9 +205,9 @@
     "    signal_threshold=3.0,\n",
     "    figure_height=10,\n",
     "    cmap=\"BIH\",\n",
-    "    side_display=\"hist\",\n",
-    "    plot_boundarys=False,\n",
-    "    plot_centroid=False,\n",
+    "    side_display=\"hist\", # \"hist\", \"colorbar\", or None\n",
+    "    plot_boundary=False,\n",
+    "    plot_centroid=False\n",
     ")\n",
     "\n",
     "display(SIM)"
@@ -227,7 +227,7 @@
     "    figure_height=10,\n",
     "    cmap=\"BIH\",\n",
     "    side_display=\"colorbar\",\n",
-    "    plot_boundarys=False,\n",
+    "    plot_boundary=False,\n",
     "    plot_centroid=False,\n",
     ")\n",
     "\n",
@@ -269,7 +269,7 @@
     "    cmap=\"BIH\",\n",
     "    side_display=\"hist\",\n",
     "    # side_display=\"colorbar\",\n",
-    "    plot_boundarys=False,\n",
+    "    plot_boundary=False,\n",
     "    plot_centroid=False,\n",
     ")\n",
     "\n",
@@ -290,10 +290,11 @@
     "    cmap=\"BIH\",\n",
     "    side_display=None,\n",
     "    boundary_df=boundaries_df,\n",
-    "    plot_boundarys=True,\n",
+    "    plot_boundary=True,\n",
     "    boundary_color=\"yellow\",\n",
     "    boundary_width=1.5,\n",
     "    plot_centroid=False,\n",
+    "    scalebar=None\n",
     ")"
    ]
   },
