--- a/notebook/R3_TranscriptsNeighbours.ipynb
+++ b/notebook/R3_TranscriptsNeighbours.ipynb
@@ -265,12 +265,14 @@
     "plot_VSI_map(\n",
     "    cell_integrity=signal_integrity,\n",
     "    cell_strength=signal_strength,\n",
+    "    plot_boundary=True,\n",
     "    boundary_df=boundaries_df,\n",
     "    signal_threshold=3.0,\n",
     "    figure_height=10,\n",
     "    cmap=\"BIH\",\n",
     "    x_range=[250,350],\n",
-    "    y_range=[1450, 1550]\n",
+    "    y_range=[1450, 1550],\n",
+    "    scalebar=None\n",
     "    )"
    ]
   },
@@ -307,6 +309,8 @@
     "    cell_integrity=signal_integrity,\n",
     "    cell_strength=signal_strength,\n",
     "    boundary_df=boundaries_df,\n",
+    "    plot_boundary=True,\n",
+    "    scalebar=None,\n",
     "    signal_threshold=3.0,\n",
     "    figure_height=10,\n",
     "    cmap=\"BIH\",\n",
@@ -348,6 +352,8 @@
     "    cell_integrity=signal_integrity,\n",
     "    cell_strength=signal_strength,\n",
     "    boundary_df=boundaries_df,\n",
+    "    plot_boundary=True,\n",
+    "    scalebar=None,\n",
     "    signal_threshold=3.0,\n",
     "    figure_height=10,\n",
     "    cmap=\"BIH\",\n",
@@ -389,6 +395,8 @@
     "    cell_integrity=signal_integrity,\n",
     "    cell_strength=signal_strength,\n",
     "    boundary_df=boundaries_df,\n",
+    "    plot_boundary=True,\n",
+    "    scalebar=None,\n",
     "    signal_threshold=3.0,\n",
     "    figure_height=10,\n",
     "    cmap=\"BIH\",\n",
@@ -430,6 +438,8 @@
     "    cell_integrity=signal_integrity,\n",
     "    cell_strength=signal_strength,\n",
     "    boundary_df=boundaries_df,\n",
+    "    plot_boundary=True,\n",
+    "    scalebar=None,\n",
     "    signal_threshold=3.0,\n",
     "    figure_height=10,\n",
     "    cmap=\"BIH\",\n",
