--- a/notebook/R6_NeuronCluster.ipynb
+++ b/notebook/R6_NeuronCluster.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,27 +156,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3304, 14)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Ex_DE.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,27 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14216, 14)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "In_DE.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,27 +204,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(498, 14)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Hy_DE.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_Ex_DE.iloc[:,:2809], re_Ex_clu[:2809], DE_g=True, figures=(15,25))"
+    "plot_neuron_cluster_heatmap(re_Ex_DE.iloc[:,:1169], re_Ex_clu[:1169], DE_g=True, figures=(18/2.54,13/2.54))"
    ]
   },
   {
@@ -294,7 +261,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_Ex_DE.iloc[:,2809:], re_Ex_clu[2809:], DE_g=True, figures=(15,6))"
+    "plot_neuron_cluster_heatmap(re_Ex_DE.iloc[:,1169:3194], re_Ex_clu[1169:3194], DE_g=True, figures=(18/2.54,23/2.54))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_neuron_cluster_heatmap(re_Ex_DE.iloc[:,3194:], re_Ex_clu[3194:], DE_g=True, figures=(18/2.54,2.5/2.54))"
    ]
   },
   {
@@ -329,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,:4865], re_IN_clu[:4865], DE_g=True, figures=(15,25))"
+    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,:2269], re_IN_clu[:2269], DE_g=True, figures=(18/2.54,9/2.54))"
    ]
   },
   {
@@ -338,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,4865:8702], re_IN_clu[4865:8702], DE_g=True, figures=(15,25))"
+    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,2269:8148], re_IN_clu[2269:8148], DE_g=True, figures=(18/2.54,23/2.54))"
    ]
   },
   {
@@ -347,16 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,8702:12840], re_IN_clu[8702:12840], DE_g=True, figures=(15,25))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,12841:], re_IN_clu[12841:], DE_g=True, figures=(15,11))"
+    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,8148:], re_IN_clu[8148:], DE_g=True, figures=(18/2.54,22/2.54))"
    ]
   },
   {
@@ -381,13 +348,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_Hy_DE, re_Hy_clu, DE_g=True,  figures=(15,3))"
+    "plot_neuron_cluster_heatmap(re_Hy_DE, re_Hy_clu, DE_g=True,  figures=(18/2.54,3/2.54))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ovrlpy_0513",
+   "display_name": "ovrlpy",
    "language": "python",
    "name": "python3"
   },
@@ -401,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
