--- a/notebook/R1_SliceEquivalence.ipynb
+++ b/notebook/R1_SliceEquivalence.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "banksy_result = load_banksy_result(banksy_folder_path/\"banksy_cluster.txt\")"
+    "banksy_result = columns = [\"Centroid_X\", \"Centroid_Y\", \"Bregma\", \"lam0.2\"]\n",
+    "\n",
+    "banksy_result = pd.read_csv(\n",
+    "        banksy_folder_path/\"banksy_cluster.txt\",\n",
+    "        usecols=columns,\n",
+    "        sep=\"\\t\"\n",
+    "    ).rename(\n",
+    "        columns={\n",
+    "            \"Centroid_X\": \"x\",\n",
+    "            \"Centroid_Y\": \"y\",\n",
+    "            \"Bregma\": \"Bregma\",\n",
+    "            \"lam0.2\": \"banksy_cluster\",\n",
+    "        }\n",
+    "    )"
    ]
   },
   {
@@ -119,11 +132,11 @@
    "source": [
     "colors = banksy_024['banksy_cluster'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(6, 6),  dpi=600)\n",
+    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_024[\"x\"],\n",
     "    banksy_024[\"y\"],\n",
-    "    s=3,\n",
+    "    s=0.3,\n",
     "    c=colors\n",
     ")\n",
     "\n",
@@ -137,9 +150,15 @@
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
     "\n",
-    "plt.title(\"Bregma -0.24 mm\", fontsize=17)\n",
-    "plt.xlabel(\"(μm)\", fontsize=15)\n",
-    "plt.ylabel(\"(μm)\", fontsize=15)\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.spines['left'].set_linewidth(0.3)\n",
+    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "plt.title(\"Bregma -0.24 mm\", fontsize=7)\n",
+    "plt.xlabel(\"(μm)\", fontsize=5)\n",
+    "plt.ylabel(\"(μm)\", fontsize=5)\n",
     "plt.show()\n"
    ]
   },
@@ -164,26 +183,34 @@
    "source": [
     "colors = banksy_016['banksy_cluster'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(6, 6),  dpi=600)\n",
+    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_016[\"x\"],\n",
     "    banksy_016[\"y\"],\n",
-    "    s=3,\n",
+    "    s=0.3,\n",
     "    c=colors\n",
     ")\n",
     "\n",
     "ax = plt.gca()  # Get the current axis\n",
     "ax.set_aspect('equal', adjustable='box')\n",
+    "# plt.colorbar(sc, shrink=0.8)\n",
     "plt.xlim(-10, 1810)\n",
     "plt.ylim(-10, 1810)\n",
     "\n",
+    "# Correct way to hide spines\n",
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
     "\n",
-    "plt.title(\"Bregma 0.16 mm\")\n",
-    "plt.xlabel(\"(μm)\")\n",
-    "plt.ylabel(\"(μm)\")\n",
-    "plt.show()"
+    "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "ax.spines['left'].set_linewidth(0.3)\n",
+    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "plt.title(\"Bregma 0.16 mm\", fontsize=7)\n",
+    "plt.xlabel(\"(μm)\", fontsize=5)\n",
+    "plt.ylabel(\"(μm)\", fontsize=5)\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -207,16 +234,17 @@
    "source": [
     "colors = banksy_026['banksy_cluster'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(6, 6),  dpi=600)\n",
+    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_026[\"x\"],\n",
     "    banksy_026[\"y\"],\n",
-    "    s=3,\n",
+    "    s=0.3,\n",
     "    c=colors\n",
     ")\n",
     "\n",
     "ax = plt.gca()  # Get the current axis\n",
     "ax.set_aspect('equal', adjustable='box')\n",
+    "# plt.colorbar(sc, shrink=0.8)\n",
     "plt.xlim(-10, 1810)\n",
     "plt.ylim(-10, 1810)\n",
     "\n",
@@ -224,10 +252,16 @@
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
     "\n",
-    "plt.title(\"Bregma 0.26 mm\", fontsize = 13)\n",
-    "plt.xlabel(\"(μm)\")\n",
-    "plt.ylabel(\"(μm)\")\n",
-    "plt.show()\n"
+    "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.spines['left'].set_linewidth(0.3)\n",
+    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "plt.title(\"Bregma 0.26 mm\", fontsize=7)\n",
+    "plt.xlabel(\"(μm)\", fontsize=5)\n",
+    "plt.ylabel(\"(μm)\", fontsize=5)\n",
+    "plt.show()"
    ]
   },
   {
@@ -268,7 +302,7 @@
     "df_normalized = df_normalized.sort_index(ascending=False)\n",
     "\n",
     "\n",
-    "plt.figure(figsize=(15, 6), dpi=600)\n",
+    "plt.figure(figsize=(13/2.54, 6/2.54), dpi=600)\n",
     "\n",
     "ax = df_normalized.plot(kind=\"barh\", stacked=True, figsize=(15, 6), color=[full_color_map.get(label) for label in df_normalized.columns])\n",
     "\n",
@@ -278,9 +312,9 @@
     "ax.tick_params(axis='x', labelsize=11)\n",
     "ax.tick_params(axis='y', labelsize=11)\n",
     "\n",
-    "plt.xlabel(\"Clusters Proportion\",fontsize=12)\n",
-    "plt.ylabel(\"Bregma\",fontsize=12)\n",
-    "plt.title(\"Normalized Stacked Bar Plot of BANKSY Cluster by Bregma\",fontsize=13)\n",
+    "plt.xlabel(\"Clusters Proportion\",fontsize=13)\n",
+    "plt.ylabel(\"Bregma\",fontsize=13)\n",
+    "plt.title(\"Normalized Stacked Bar Plot of BANKSY Cluster by Bregma\",fontsize=15)\n",
     "\n",
     "plt.show()\n"
    ]
@@ -311,19 +345,24 @@
    "source": [
     "colors = all_UMAP['banksy'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(8, 8),  dpi=600)\n",
+    "plt.figure(figsize=(8/2.54, 8/2.54),  dpi=600)\n",
     "\n",
-    "sc = plt.scatter(all_UMAP['UMAP_1'], all_UMAP['UMAP_2'], s=3, c=colors)\n",
+    "sc = plt.scatter(all_UMAP['UMAP_1'], all_UMAP['UMAP_2'], s=0.3, c=colors)\n",
     "\n",
     "ax = plt.gca()\n",
     "ax.set_aspect('equal', adjustable='box')\n",
     "\n",
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
-    "\n",
-    "plt.title(\"All Slices\", fontsize=17)\n",
-    "plt.xlabel(\"UMAP1\", fontsize=17)\n",
-    "plt.ylabel(\"UMAP2\", fontsize=17)\n",
+    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.spines['left'].set_linewidth(0.3)\n",
+    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "plt.title(\"All Slices\", fontsize=8)\n",
+    "plt.xlabel(\"UMAP1\", fontsize=7)\n",
+    "plt.ylabel(\"UMAP2\", fontsize=7)\n",
     "plt.xlim(-20,30)\n",
     "plt.ylim(-30,20)\n",
     "plt.show()"
@@ -348,19 +387,24 @@
    "source": [
     "colors = B24_UMAP['banksy'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(8, 8),  dpi=600)\n",
+    "plt.figure(figsize=(8/2.54, 8/2.54),  dpi=600)\n",
     "\n",
-    "sc = plt.scatter(B24_UMAP['UMAP_1'], B24_UMAP['UMAP_2'], s=3, c=colors)\n",
+    "sc = plt.scatter(B24_UMAP['UMAP_1'], B24_UMAP['UMAP_2'], s=0.3, c=colors)\n",
     "\n",
     "ax = plt.gca()\n",
     "ax.set_aspect('equal', adjustable='box')\n",
     "\n",
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
-    "\n",
-    "plt.title(\"Bregma -0.24 mm\", fontsize=17)\n",
-    "plt.xlabel(\"UMAP1\", fontsize=17)\n",
-    "plt.ylabel(\"UMAP2\", fontsize=17)\n",
+    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.spines['left'].set_linewidth(0.3)\n",
+    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "plt.title(\"Bregma -0.24 mm\", fontsize=8)\n",
+    "plt.xlabel(\"UMAP1\", fontsize=7)\n",
+    "plt.ylabel(\"UMAP2\", fontsize=7)\n",
     "plt.xlim(-20,30)\n",
     "plt.ylim(-30,20)\n",
     "plt.show()"
@@ -384,19 +428,24 @@
    "source": [
     "colors = B16_UMAP['banksy'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(8, 8),  dpi=600)\n",
+    "plt.figure(figsize=(8/2.54, 8/2.54),  dpi=600)\n",
     "\n",
-    "sc = plt.scatter(B16_UMAP['UMAP_1'], B16_UMAP['UMAP_2'], s=3, c=colors)\n",
+    "sc = plt.scatter(B16_UMAP['UMAP_1'], B16_UMAP['UMAP_2'], s=0.3, c=colors)\n",
     "\n",
     "ax = plt.gca()\n",
     "ax.set_aspect('equal', adjustable='box')\n",
     "\n",
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
-    "\n",
-    "plt.title(\"Bregma 0.16 mm\", fontsize=17)\n",
-    "plt.xlabel(\"UMAP1\", fontsize=17)\n",
-    "plt.ylabel(\"UMAP2\", fontsize=17)\n",
+    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.spines['left'].set_linewidth(0.3)\n",
+    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "plt.title(\"Bregma 0.16 mm\", fontsize=8)\n",
+    "plt.xlabel(\"UMAP1\", fontsize=7)\n",
+    "plt.ylabel(\"UMAP2\", fontsize=7)\n",
     "plt.xlim(-20,30)\n",
     "plt.ylim(-30,20)\n",
     "plt.show()"
@@ -420,19 +469,24 @@
    "source": [
     "colors = B26_UMAP['banksy'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(8, 8),  dpi=600)\n",
+    "plt.figure(figsize=(8/2.54, 8/2.54),  dpi=600)\n",
     "\n",
-    "sc = plt.scatter(B26_UMAP['UMAP_1'], B26_UMAP['UMAP_2'], s=3, c=colors)\n",
+    "sc = plt.scatter(B26_UMAP['UMAP_1'], B26_UMAP['UMAP_2'], s=0.3, c=colors)\n",
     "\n",
     "ax = plt.gca()\n",
     "ax.set_aspect('equal', adjustable='box')\n",
     "\n",
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
-    "\n",
-    "plt.title(\"Bregma 0.26 mm\", fontsize=17)\n",
-    "plt.xlabel(\"UMAP1\", fontsize=17)\n",
-    "plt.ylabel(\"UMAP2\", fontsize=17)\n",
+    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.spines['left'].set_linewidth(0.3)\n",
+    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "plt.title(\"Bregma 0.26 mm\", fontsize=8)\n",
+    "plt.xlabel(\"UMAP1\", fontsize=7)\n",
+    "plt.ylabel(\"UMAP2\", fontsize=7)\n",
     "plt.xlim(-20,30)\n",
     "plt.ylim(-30,20)\n",
     "plt.show()"
@@ -465,11 +519,11 @@
     "color_map = {7: 'orange', 8: 'red'}\n",
     "colors = banksy_024_MOD['banksy_cluster'].map(color_map)\n",
     "\n",
-    "plt.figure(figsize=(6, 6),  dpi=600)\n",
+    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_024_MOD[\"x\"],\n",
     "    banksy_024_MOD[\"y\"],\n",
-    "    s=3,\n",
+    "    s=0.3,\n",
     "    c=colors,\n",
     ")\n",
     "\n",
@@ -480,10 +534,15 @@
     "\n",
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
-    "\n",
-    "plt.title(\"Bregma -0.24 mm\")\n",
-    "plt.xlabel(\"(μm)\")\n",
-    "plt.ylabel(\"(μm)\")\n",
+    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.spines['left'].set_linewidth(0.3)\n",
+    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "plt.title(\"Bregma -0.24 mm\", fontsize  = 7)\n",
+    "plt.xlabel(\"(μm)\", fontsize  = 5)\n",
+    "plt.ylabel(\"(μm)\", fontsize  = 5)\n",
     "plt.show()\n"
    ]
   },
@@ -508,11 +567,11 @@
     "color_map = {7: 'orange', 8: 'red'}\n",
     "colors = banksy_016_MOD['banksy_cluster'].map(color_map)\n",
     "\n",
-    "plt.figure(figsize=(6, 6),  dpi=600)\n",
+    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_016_MOD[\"x\"],\n",
     "    banksy_016_MOD[\"y\"],\n",
-    "    s=3,\n",
+    "    s=0.3,\n",
     "    c=colors,\n",
     ")\n",
     "\n",
@@ -523,11 +582,16 @@
     "\n",
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
-    "\n",
-    "plt.title(\"Bregma 0.16 mm\")\n",
-    "plt.xlabel(\"(μm)\")\n",
-    "plt.ylabel(\"(μm)\")\n",
-    "plt.show()\n"
+    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.spines['left'].set_linewidth(0.3)\n",
+    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "plt.title(\"Bregma 0.16 mm\", fontsize  = 7)\n",
+    "plt.xlabel(\"(μm)\", fontsize  = 5)\n",
+    "plt.ylabel(\"(μm)\", fontsize  = 5)\n",
+    "plt.show()"
    ]
   },
   {
@@ -551,11 +615,11 @@
     "color_map = {7: 'orange', 8: 'red'}\n",
     "colors = banksy_026_MOD['banksy_cluster'].map(color_map)\n",
     "\n",
-    "plt.figure(figsize=(6, 6),  dpi=600)\n",
+    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_026_MOD[\"x\"],\n",
     "    banksy_026_MOD[\"y\"],\n",
-    "    s=3,\n",
+    "    s=0.3,\n",
     "    c=colors,\n",
     ")\n",
     "\n",
@@ -566,17 +630,29 @@
     "\n",
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
-    "\n",
-    "plt.title(\"Bregma 0.26 mm\")\n",
-    "plt.xlabel(\"(μm)\")\n",
-    "plt.ylabel(\"(μm)\")\n",
-    "plt.show()\n"
+    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
+    "ax.spines['left'].set_linewidth(0.3)\n",
+    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "plt.title(\"Bregma 0.26 mm\", fontsize  = 7)\n",
+    "plt.xlabel(\"(μm)\", fontsize  = 5)\n",
+    "plt.ylabel(\"(μm)\", fontsize  = 5)\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ovrlpy_0513",
+   "display_name": "ovrlpy",
    "language": "python",
    "name": "python3"
   },
@@ -590,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
