--- a/notebook/R2_VSI.ipynb
+++ b/notebook/R2_VSI.ipynb
@@ -18,11 +18,9 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "\n",
-    "sys.path.append(os.path.abspath(\"../src\"))\n",
-    "\n",
     "from pathlib import Path\n",
     "\n",
+    "sys.path.append(os.path.abspath(\"../src\"))\n",
     "from utils import load_merfish_signal_df, load_banksy_result, load_merfish_data, load_boundaries_data\n",
     "from utils import extract_cell_vsi\n",
     "from plot import plot_VSI_map, plot_vsi_with_named_squares, plot_vsi_distribution_comparison, plot_normalized_histogram, plot_vsi_qqplot\n",
@@ -203,7 +201,7 @@
     "    cell_integrity = signal_integrity,\n",
     "    cell_strength = signal_strength,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=10,\n",
+    "    figure_height=10/2.54,\n",
     "    cmap=\"BIH\",\n",
     "    side_display=\"hist\", # \"hist\", \"colorbar\", or None\n",
     "    plot_boundary=False,\n",
@@ -224,7 +222,7 @@
     "    cell_integrity = signal_integrity,\n",
     "    cell_strength = signal_strength,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=10,\n",
+    "    figure_height=10/2.54,\n",
     "    cmap=\"BIH\",\n",
     "    side_display=\"colorbar\",\n",
     "    plot_boundary=False,\n",
@@ -265,10 +263,10 @@
     "    cell_integrity = cell_integrity,\n",
     "    cell_strength = cell_strength,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=10,\n",
+    "    figure_height=10/2.54,\n",
     "    cmap=\"BIH\",\n",
-    "    side_display=\"hist\",\n",
-    "    # side_display=\"colorbar\",\n",
+    "    # side_display=\"hist\",\n",
+    "    side_display=\"colorbar\",\n",
     "    plot_boundary=False,\n",
     "    plot_centroid=False,\n",
     ")\n",
@@ -286,13 +284,13 @@
     "    cell_integrity = cell_integrity,\n",
     "    cell_strength = cell_strength,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=10,\n",
+    "    figure_height=10/2.54,\n",
     "    cmap=\"BIH\",\n",
     "    side_display=None,\n",
     "    boundary_df=boundaries_df,\n",
     "    plot_boundary=True,\n",
     "    boundary_color=\"yellow\",\n",
-    "    boundary_width=1.5,\n",
+    "    boundary_width=1.3,\n",
     "    plot_centroid=False,\n",
     "    scalebar=None\n",
     ")"
@@ -313,10 +311,10 @@
    "outputs": [],
    "source": [
     "regions = [\n",
-    "    {\"x\": 400, \"y\": 1190, \"name\": None},\n",
-    "    {\"x\": 1400, \"y\": 250, \"name\": None},\n",
-    "    {\"x\": 50, \"y\": 440, \"name\": None},\n",
-    "    {\"x\": 1350, \"y\": 950, \"name\": None},\n",
+    "    {\"x\": 400, \"y\": 1190, \"name\": \"Region 1\"},\n",
+    "    {\"x\": 1400, \"y\": 250, \"name\": \"Region 4\"},\n",
+    "    {\"x\": 50, \"y\": 440, \"name\": \"Region 3\"},\n",
+    "    {\"x\": 1350, \"y\": 950, \"name\": \"Region 2\"},\n",
     "]"
    ]
   },
@@ -326,7 +324,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VSI_ROI = plot_vsi_with_named_squares(cell_integrity, cell_strength, named_squares=regions)\n",
+    "VSI_ROI = plot_vsi_with_named_squares(cell_integrity, cell_strength, \n",
+    "                                      signal_threshold=3.0,\n",
+    "    figure_height=10/2.54,\n",
+    "    cmap=\"BIH\",\n",
+    "    side_display=None,\n",
+    "    # side_display='colorbar',\n",
+    "    boundary_df=boundaries_df,\n",
+    "    plot_boundary=False,\n",
+    "    boundary_color=\"yellow\",\n",
+    "    boundary_width=0.3,\n",
+    "    plot_centroid=False,\n",
+    "    named_squares=regions)\n",
     "\n",
     "display(VSI_ROI)"
    ]
@@ -432,7 +441,7 @@
     "    cell_integrity_2=MOD2_int,\n",
     "    cell_strength_2=MOD2_str,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=7,\n",
+    "    figure_height=6/2.54,\n",
     "    cmap=\"BIH\",\n",
     "    ylim=(1e-1,64)\n",
     ")"
@@ -459,7 +468,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ovrlpy_0513",
+   "display_name": "ovrlpy",
    "language": "python",
    "name": "python3"
   },
@@ -473,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
