--- a/notebook/R3_TranscriptsNeighbours.ipynb
+++ b/notebook/R3_TranscriptsNeighbours.ipynb
@@ -244,7 +244,17 @@
    "outputs": [],
    "source": [
     "# complete vsi map\n",
-    "VSI_ROI = plot_vsi_with_named_squares(signal_integrity, signal_strength, named_squares=regions)\n",
+    "VSI_ROI = plot_vsi_with_named_squares(signal_integrity, signal_strength, \n",
+    "                                          signal_threshold=3.0,\n",
+    "    figure_height=10/2.54,\n",
+    "    cmap=\"BIH\",\n",
+    "    side_display='colorbar',\n",
+    "    boundary_df=boundaries_df,\n",
+    "    plot_boundary=False,\n",
+    "    boundary_color=\"yellow\",\n",
+    "    boundary_width=0.3,\n",
+    "    plot_centroid=False,\n",
+    "    named_squares=regions)\n",
     "display(VSI_ROI)"
    ]
   },
@@ -268,7 +278,7 @@
     "    plot_boundary=True,\n",
     "    boundary_df=boundaries_df,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=10,\n",
+    "    figure_height=10/2.54,\n",
     "    cmap=\"BIH\",\n",
     "    x_range=[250,350],\n",
     "    y_range=[1450, 1550],\n",
@@ -493,21 +503,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_circular_neighborhood(signals_df=signal_coordinate_df,\n",
-    "                                centroid_df=merfish_data, \n",
-    "                                MOD_boundaries=MOD_boundaries,\n",
-    "                                boundaries_df=other_boundaries, \n",
-    "                                x_range=[250, 350], y_range=[1450, 1550], \n",
-    "                                diameters=[6, 8, 10, 12], true_boundary=True, \n",
-    "                                plot_top20=False, top20=None)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -527,21 +522,6 @@
     "                                x_range=[1350, 1450], y_range=[1300, 1400], \n",
     "                                diameters=[6, 8, 10, 12], true_boundary=True, \n",
     "                                plot_top20=True, top20=top20.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_circular_neighborhood(signals_df=signal_coordinate_df,\n",
-    "                                centroid_df=merfish_data, \n",
-    "                                MOD_boundaries=MOD_boundaries,\n",
-    "                                boundaries_df=other_boundaries, \n",
-    "                                x_range=[1350, 1450], y_range=[1300, 1400], \n",
-    "                                diameters=[6, 8, 10, 12], true_boundary=True, \n",
-    "                                plot_top20=False, top20=None)"
    ]
   },
   {
@@ -567,21 +547,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_circular_neighborhood(signals_df=signal_coordinate_df,\n",
-    "                                centroid_df=merfish_data, \n",
-    "                                MOD_boundaries=MOD_boundaries,\n",
-    "                                boundaries_df=other_boundaries, \n",
-    "                                x_range=[850, 950], y_range=[950, 1050], \n",
-    "                                diameters=[6, 8, 10, 12], true_boundary=True, \n",
-    "                                plot_top20=False, top20=None)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -604,21 +569,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_circular_neighborhood(signals_df=signal_coordinate_df,\n",
-    "                                centroid_df=merfish_data, \n",
-    "                                MOD_boundaries=MOD_boundaries,\n",
-    "                                boundaries_df=other_boundaries, \n",
-    "                                x_range=[200, 300], y_range=[300, 400], \n",
-    "                                diameters=[6, 8, 10, 12], true_boundary=True, \n",
-    "                                plot_top20=False, top20=None)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -638,21 +588,6 @@
     "                                x_range=[1580, 1680], y_range=[350,450],\n",
     "                                diameters=[6, 8, 10, 12], true_boundary=True, \n",
     "                                plot_top20=True, top20=top20.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_circular_neighborhood(signals_df=signal_coordinate_df,\n",
-    "                                centroid_df=merfish_data, \n",
-    "                                MOD_boundaries=MOD_boundaries,\n",
-    "                                boundaries_df=other_boundaries, \n",
-    "                                x_range=[1580, 1680], y_range=[350,450],\n",
-    "                                diameters=[6, 8, 10, 12], true_boundary=True, \n",
-    "                                plot_top20=False, top20=None)"
    ]
   },
   {
@@ -685,21 +620,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
-    "                                centroid_df=merfish_data, \n",
-    "                                MOD_boundaries=MOD_boundaries,\n",
-    "                                boundaries_df=other_boundaries,  \n",
-    "                                x_range=[250, 350], y_range=[1450, 1550],\n",
-    "                                neighbors=[40, 80, 160, 240], true_boundary=True, \n",
-    "                                plot_top20=False, top20=None)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -719,21 +639,6 @@
     "                                x_range=[1350, 1450], y_range=[1300, 1400], \n",
     "                                neighbors=[40, 80, 160, 240], true_boundary=True, \n",
     "                                plot_top20=True, top20=top20.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
-    "                                centroid_df=merfish_data, \n",
-    "                                MOD_boundaries=MOD_boundaries,\n",
-    "                                boundaries_df=other_boundaries, \n",
-    "                                x_range=[1350, 1450], y_range=[1300, 1400], \n",
-    "                                neighbors=[40, 80, 160, 240], true_boundary=True, \n",
-    "                                plot_top20=False, top20=None)"
    ]
   },
   {
@@ -759,21 +664,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
-    "                                centroid_df=merfish_data, \n",
-    "                                MOD_boundaries=MOD_boundaries,\n",
-    "                                boundaries_df=other_boundaries, \n",
-    "                                x_range=[850, 950], y_range=[950, 1050], \n",
-    "                                neighbors=[40, 80, 160, 240], true_boundary=True, \n",
-    "                                plot_top20=False, top20=None)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -793,21 +683,6 @@
     "                                x_range=[200, 300], y_range=[300, 400], \n",
     "                                neighbors=[40, 80, 160, 240], true_boundary=True, \n",
     "                                plot_top20=True, top20=top20.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
-    "                                centroid_df=merfish_data, \n",
-    "                                MOD_boundaries=MOD_boundaries,\n",
-    "                                boundaries_df=other_boundaries, \n",
-    "                                x_range=[200, 300], y_range=[300, 400], \n",
-    "                                neighbors=[40, 80, 160, 240], true_boundary=True, \n",
-    "                                plot_top20=False, top20=None)"
    ]
   },
   {
@@ -831,26 +706,11 @@
     "                                neighbors=[40, 80, 160, 240], true_boundary=True, \n",
     "                                plot_top20=True, top20=top20.index)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
-    "                                centroid_df=merfish_data, \n",
-    "                                MOD_boundaries=MOD_boundaries,\n",
-    "                                boundaries_df=other_boundaries, \n",
-    "                                x_range=[1580, 1680], y_range=[350,450], \n",
-    "                                neighbors=[40, 80, 160, 240], true_boundary=True, \n",
-    "                                plot_top20=False, top20=None)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ovrlpy_0513",
+   "display_name": "ovrlpy",
    "language": "python",
    "name": "python3"
   },
@@ -864,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
