--- a/notebook/R4_MODmarkers.ipynb
+++ b/notebook/R4_MODmarkers.ipynb
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_marker_signals(signal_df=MOD1_signals, centroid_df= MOD1_df, title=\"MOD1 Signals\", color=\"MOD1\")"
+    "plot_marker_signals(signal_df=MOD1_signals, centroid_df= MOD1_df, title=\"MOD1 Marker\", color=\"MOD1\")"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_marker_signals(signal_df=MOD2_signals, centroid_df= MOD2_df, title=\"MOD2 Signals\", color=\"MOD2\")"
+    "plot_marker_signals(signal_df=MOD2_signals, centroid_df= MOD2_df, title=\"MOD2 Marker\", color=\"MOD2\")"
    ]
   },
   {
@@ -270,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ovrlpy_0513",
+   "display_name": "ovrlpy",
    "language": "python",
    "name": "python3"
   },
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
