--- a/notebook/R5_MODscRNA.ipynb
+++ b/notebook/R5_MODscRNA.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,17 +136,17 @@
    "source": [
     "cell_class_dict = {\n",
     "    'Astrocytes': 'Astrocytes',\n",
-    "    'Endothelial': 'Endothelial',\n",
-    "    'Ependymal': 'Ependymal',\n",
-    "    'Excitatory': 'Excitatory',\n",
-    "    'Fibroblast': 'Fibroblast',\n",
-    "    'Immature oligodendrocyte': 'OD immature',\n",
-    "    'Inhibitory': 'Inhibitory',\n",
-    "    'Macrophage': 'Macrophage',\n",
-    "    'Mature oligodendrocyte': 'OD mature',\n",
     "    'Microglia': 'Microglia',\n",
-    "    'Mural': 'Mural',\n",
+    "    'Macrophage': 'Macrophage',\n",
+    "    'Excitatory': 'Excitatory',\n",
+    "    'Inhibitory': 'Inhibitory',\n",
+    "    'Immature oligodendrocyte': 'OD immature',\n",
     "    'Newly formed oligodendrocyte': 'OD newly formed',\n",
+    "    'Mature oligodendrocyte': 'OD mature',\n",
+    "    'Ependymal': 'Ependymal',\n",
+    "    'Endothelial': 'Endothelial',\n",
+    "    'Mural': 'Mural',\n",
+    "    'Fibroblast': 'Fibroblast',\n",
     "}\n",
     "\n",
     "adata = load_scRNA_data(\n",
@@ -363,7 +363,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ovrlpy_0513",
+   "display_name": "ovrlpy",
    "language": "python",
    "name": "python3"
   },
@@ -377,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
